# DocsAgent

./: .gitignore  README.md  dev-guide.md  dev.cn.md  pyproject.toml  test_demo.py
.github/: copilot-instructions.md
conf/: agent.conf  example.conf
src/docsagent/: __init__.py  agents.py  config.py  main.py  models.py
src/docsagent/agents/: __init__.py  config_doc_agent.py  config_pipeline.py  functions_agent.py  llm.py  pipeline.py  tools.py  translation_agent.py  variables_agent.py
src/docsagent/code_extract/: code_search.py  fe_config_parser.py  variables_parser.py
src/docsagent/core/: __init__.py  git_persister.py  pipeline.py  protocols.py  version_extractor.py
src/docsagent/docs_extract/: config_meta_extract.py  function_meta_extract.py  variables_meta_extract.py
src/docsagent/docs_module/en/: BE_configuration.md  FE_configuration.md  System_variable.md
src/docsagent/docs_module/ja/: BE_configuration.md  FE_configuration.md  System_variable.md
src/docsagent/docs_module/zh/: BE_configuration.md  FE_configuration.md  System_variable.md
src/docsagent/domains/: __init__.py  factory.py  models.py
src/docsagent/domains/be_config/: __init__.py  extractor.py  generator.py  git_persister.py  persister.py  version_extractor.py
src/docsagent/domains/fe_config/: __init__.py  extractor.py  generator.py  git_persister.py  persister.py  version_extractor.py
src/docsagent/domains/functions/: __init__.py  extractor.py  generator.py  git_persister.py  persister.py
src/docsagent/tools/: __init__.py  code_search.py  code_tools.py  file_reader.py  git_operator.py  sr_client.py  stats.py
tests/: debug_tree_sitter.py  demo_comment_extraction.py  test_cli.py  test_config.py  test_config_doc_agent.py  test_config_refactor.py  test_fe_config.py  test_meta_build.py  test_new_design.py  test_new_pipeline.py  test_pipeline.py  test_search_performance.py
(+6 files in other folders)
